# stock

./: .env.example  .gitignore  README.md  pyproject.toml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
docs/: AI_HANDOFF_2026-06-24.md  AI_HANDOFF_2026-07-13.md  AI_HANDOFF_2026-07-22.md  architecture.md  development.md  mvp.md
infra/: docker-compose.yml
infra/launchd/: com.stock-research.celery-beat.plist  com.stock-research.celery-worker.plist
services/collector/: akshare_client.py  contracts.py  (+11 more)
tests/: conftest.py  test_after_close_status.py  test_backtest_learning.py  test_backtest_sync.py  test_collector_daily.py  test_collector_sync.py  test_daily_backtest.py  test_daily_features.py  test_data_health.py  test_database.py  test_external_market_mapping.py  test_external_market_signal_sync.py  test_fundamental_akshare.py  test_fundamental_scoring.py  test_historical_replay.py  test_intraday_candidates.py  test_intraday_market_turn.py  test_intraday_signal_replay.py  test_intraday_startup_outcomes.py  test_jobs_api.py  test_jobs_pipeline.py  test_long_replay_baseline.py  test_mainline_tracking.py  test_market_api.py  test_market_regime.py  test_market_stress_recovery_replay.py  test_market_turn.py  test_market_universe.py  test_monthly_summary.py  test_naver_finance.py  test_network_isolation.py  test_next_session_candidates.py  test_notifications.py  test_paper_diagnostics.py  test_paper_learning.py  test_paper_learning_api.py  test_paper_position_sizing.py  test_paper_repository.py  test_paper_simulator.py  test_paper_trade_review.py  (+26 more)
(+169 files in other folders)
