[project]
name = "stock-research-system"
version = "0.1.0"
description = "Local A-share research, backtest, rule regression, and review system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pymysql>=1.1.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "pandas>=2.2.0",
  "polars>=1.0.0",
  "numpy>=2.0.0",
  "python-dotenv>=1.0.0",
  "akshare>=1.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["apps*", "services*"]
exclude = ["infra*", "docs*", "tests*"]
